--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-      "start": "node app.js"
+      "start": "node index.js"
     },
     "dependencies": {
       "axios": "^1.6.0",
